# new-octo

./: .env.example  .gitignore  README.md  TODO.md  index.html  package-lock.json  package.json  run.sh  stop.sh
docs/: 01_chain_of_thought.md  02_tool_call_lifecycle.md  03_conversation_exchange_model.md  04_event_streaming_retry.md  05_mcp_integration.md  06_autonomous_agent_loop.md  07_predict_and_tips.md  agent_raport.md  artifact_construction.md  internal_memory_management.md  terminal_command_prediction.md
docs/architecture/: 00-index.md  01-terminal.md  02-agent-sdk-harness.md  03-ambient-agents.md  04-chat-window.md  05-input-and-menus.md  06-skeleton.md  07-search-autodetect.md  08-sessions-cloud-local.md  09-settings-sharing-telemetry.md  10-settings-ui-menus.md
scripts/: dev-start.sh  dev-stop.sh  tauri-cli.sh  tauri-dev.sh  tauri-env.sh
src/: App.css  App.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs
src-tauri/src/ai/: harness.rs  manager.rs  mod.rs  openai.rs  scripted.rs  types.rs
src-tauri/src/ai/agent/: actions.rs  commands.rs  conversation.rs  decision.rs  harness.rs  mod.rs  openai.rs  scripted.rs  types.rs
src-tauri/src/ai/agent_management/: manager.rs  mod.rs  retry.rs
src-tauri/src/ai/artifacts/: mod.rs
src-tauri/src/ai/mcp/: mod.rs
src-tauri/src/ai/predict/: ai_client.rs  context.rs  mod.rs  model.rs  scoring.rs
src-tauri/src/terminal/: ansi.rs  block.rs  mod.rs  pty.rs  session.rs
src/components/: ChatPanel.css  ChatPanel.tsx  ComposerBar.tsx  TrayCommands.css  TrayCommands.tsx  TrayHelp.css  TrayHelp.tsx  TrayPanel.css  TrayPanel.tsx  trayTypes.ts
src/components/App/: AppWindow.css  AppWindow.tsx  index.ts
src/components/Chat/: ChatPanel.css  ChatPanel.tsx  MessageBubble.tsx  TerminalBlockCard.tsx  TerminalBlockDetail.tsx  TerminalBlockSummary.tsx
src/components/Composer/: index.ts  (+8 more)
src/hooks/: test_api.ts  useChat.ts  useCommandHistory.ts  useGitContext.ts  useKeyboardShortcuts.ts  useModelSelection.ts  useShellCommandIndex.ts  useShellPathPrediction.ts  useTerminalCommandBlocks.ts  useTerminalRuntimeContext.ts  useTray.ts  useUnifiedShellPrediction.ts  useWindowSync.ts  useWorkingDirectory.ts
src/lib/: composerIntelligence.ts  constants.ts  pathLabels.ts  utils.ts
src/stores/: chatStore.ts  uiStore.ts
src/types/: chat.ts  filesystem.ts  git.ts  history.ts  model.ts  terminal.ts  ui.ts
(+60 files in other folders)
