[package]
name = "octomus_launcher_prototype"
version = "0.1.0"
description = "Rust + React prototype for the Octomus main launcher"
authors = ["OpenAI Codex"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
futures-util = "0.3"
portable-pty = "0.8"
reqwest = { version = "0.12", features = ["json", "stream", "native-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri = { version = "2.0.0", features = ["macos-private-api", "tray-icon"] }
tokio = { version = "1.0", features = ["rt-multi-thread"] }
uuid = { version = "1.0", features = ["serde", "v4"] }

[target."cfg(not(any(target_os = \"android\", target_os = \"ios\")))".dependencies]
tauri-plugin-global-shortcut = "2.0.0"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
